Fixed issue where tooltip was not showing the first time Removing tweets in array if too many (>50)

--- a/client/app/components/common/tweet/tweet.css
+++ b/client/app/components/common/tweet/tweet.css
@@ -1,6 +1,6 @@
 .animate-repeat {
 	left: 0;
-	max-height: 100px;
+	max-height: 150px;
 	opacity: 1;
 	position: relative;
 	-webkit-transition: 1s linear all;
@@ -28,7 +28,7 @@
 .animate-repeat.ng-move.ng-move-active,
 .animate-repeat.ng-enter.ng-enter-active {
 	opacity: 1;
-	max-height: 60px;
+	max-height: 150px;
 }
 
 /**
